renovating the database structure with Swipe & Match models. Aimed effective matching of tenants

--- a/templates/index/_properties.html
+++ b/templates/index/_properties.html
@@ -17,7 +17,7 @@ style="border-top: .5px solid #c7e6f4; padding-top: 7.25rem; padding-bottom: 4.2
       <div class="grid row row-cols-xl-3 row-cols-md-2 g-4">
         <div class="properties-card industrial commercial resident">
           <div class="properties-card--thumb">
-            <img src="images/properties/properties1.png" alt="">
+            <img src="" alt="">
           </div>
           <div class="properties-card--content ">
             <div class="d-flex align-items-center properties-card--content--address">
@@ -64,7 +64,7 @@ style="border-top: .5px solid #c7e6f4; padding-top: 7.25rem; padding-bottom: 4.2
         
         <div class="properties-card agriculture resident">
           <div class="properties-card--thumb">
-            <img src="images/properties/properties2.png" alt="">
+            <img src="" alt="">
           </div>
           <div class="properties-card--content ">
             <div class="d-flex align-items-center properties-card--content--address">
@@ -111,7 +111,7 @@ style="border-top: .5px solid #c7e6f4; padding-top: 7.25rem; padding-bottom: 4.2
   
         <div class="properties-card industrial commercial resident">
           <div class="properties-card--thumb">
-            <img src="images/properties/properties3.png" alt="">
+            <img src="" alt="">
           </div>
           <div class="properties-card--content ">
             <div class="d-flex align-items-center properties-card--content--address">
@@ -158,7 +158,7 @@ style="border-top: .5px solid #c7e6f4; padding-top: 7.25rem; padding-bottom: 4.2
   
         <div class="properties-card agriculture commercial resident">
           <div class="properties-card--thumb">
-            <img src="images/properties/properties4.png" alt="">
+            <img src="" alt="">
           </div>
           <div class="properties-card--content ">
             <div class="d-flex align-items-center properties-card--content--address">
@@ -205,7 +205,7 @@ style="border-top: .5px solid #c7e6f4; padding-top: 7.25rem; padding-bottom: 4.2
   
         <div class="properties-card industrial resident">
           <div class="properties-card--thumb">
-            <img src="images/properties/properties5.png" alt="">
+            <img src="" alt="">
           </div>
           <div class="properties-card--content ">
             <div class="d-flex align-items-center properties-card--content--address">
@@ -252,7 +252,7 @@ style="border-top: .5px solid #c7e6f4; padding-top: 7.25rem; padding-bottom: 4.2
   
         <div class="properties-card agriculture resident">
           <div class="properties-card--thumb">
-            <img src="images/properties/properties6.png" alt="">
+            <img src="" alt="">
           </div>
           <div class="properties-card--content ">
             <div class="d-flex align-items-center properties-card--content--address">
