--- a/templates/tenant/_footer.html
+++ b/templates/tenant/_footer.html
@@ -70,7 +70,7 @@
           <div class="footer-widget">
             <h5>Pages</h5>
             <ul class="list-unstyled">
-              <li><a href="https://grotn.com?force=true" class="footer-link">Index</a></li>
+              <li><a href="{% url 'index:index' %}?force=true" class="footer-link">Index</a></li>
               <li><a href="{% url 'index:about' %}" class="footer-link">About</a></li>
               <li><a href="{% url 'index:tos' %}" class="footer-link">Terms of Service</a></li>
             </ul>
@@ -171,7 +171,7 @@
               <div class="footer-widget">
                 <h5>Pages</h5>
                 <ul class="list-unstyled">
-                  <li><a href="https://grotn.com?force=true" class="footer-link">Index</a></li>
+                  <li><a href="{% url 'index:index' %}?force=true" class="footer-link">Index</a></li>
                   <li><a href="{% url 'index:about' %}" class="footer-link">About</a></li>
                   <li><a href="{% url 'index:tos' %}" class="footer-link">Terms of Service</a></li>
                 </ul>
@@ -211,7 +211,7 @@
               <div class="footer-widget">
                 <h5>Pages</h5>
                 <ul class="list-unstyled">
-                  <li><a href="https://grotn.com?force=true" class="footer-link">Index</a></li>
+                  <li><a href="{% url 'index:index' %}?force=true" class="footer-link">Index</a></li>
                   <li><a href="{% url 'index:about' %}" class="footer-link">About</a></li>
                   <li><a href="{% url 'index:tos' %}" class="footer-link">Terms of Service</a></li>
                 </ul>
