succesfully did initial stripe integration, the rent buttons on tenants' housing page redirect to transaction for a Stripe Product

--- a/templates/index/_hero.html
+++ b/templates/index/_hero.html
@@ -64,7 +64,7 @@
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6 col-8">
-                    <label class="form-label">Monthly Allowance</label>
+                    <label class="form-label">Monthly Budget</label>
                     <div class="dropholder">
                       <div class="customdropdown d-flex justify-content-between align-items-center">
                         <p>€250 - €750</p>
