added 10-15 web ads houses, managed authentication system of tenants and landlords as different user types

--- a/templates/index/_hero.html
+++ b/templates/index/_hero.html
@@ -52,8 +52,8 @@
                       <div class="customdropdown d-flex justify-content-between align-items-center">
                         <p>With Roommate</p>
                         <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M8.33333 9L4.16667 14L0 9" fill="#417086"/>
-                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#417086"/>
+                          <path d="M8.33333 9L4.16667 14L0 9" fill="#9B775B"/>
+                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#9B775B"/>
                         </svg>                        
                       </div>
                       <ul class="dropdownMenu">
@@ -69,8 +69,8 @@
                       <div class="customdropdown d-flex justify-content-between align-items-center">
                         <p>€250 - €750</p>
                         <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M8.33333 9L4.16667 14L0 9" fill="#417086"/>
-                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#417086"/>
+                          <path d="M8.33333 9L4.16667 14L0 9" fill="#9B775B"/>
+                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#9B775B"/>
                         </svg>                        
                       </div>
                       <ul class="dropdownMenu">
@@ -116,8 +116,8 @@
                       <div class="customdropdown d-flex justify-content-between align-items-center">
                         <p>Single Studio</p>
                         <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M8.33333 9L4.16667 14L0 9" fill="#417086"/>
-                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#417086"/>
+                          <path d="M8.33333 9L4.16667 14L0 9" fill="#9B775B"/>
+                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#9B775B"/>
                         </svg>                        
                       </div>
                       <ul class="dropdownMenu">
@@ -133,8 +133,8 @@
                       <div class="customdropdown d-flex justify-content-between align-items-center">
                         <p>€500 - €1000</p>
                         <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M8.33333 9L4.16667 14L0 9" fill="#417086"/>
-                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#417086"/>
+                          <path d="M8.33333 9L4.16667 14L0 9" fill="#9B775B"/>
+                          <path d="M0.000163078 5L4.16683 -3.64256e-07L8.3335 5" fill="#9B775B"/>
                         </svg>                        
                       </div>
                       <ul class="dropdownMenu">
