--- a/templates/landlord/profile.html
+++ b/templates/landlord/profile.html
@@ -66,7 +66,7 @@
           <i class="ph-hash"></i>
         </span>
         <input min="0" max="20" type="number" class="form-control" placeholder="No. of Houses" name="houses"
-        value="{{ landlord.noHouses|default:'' }}">
+        value="{{ landlord.noHouses|default:0 }}">
       </div>
       <div class="input-group">
         <span class="input-group-text" >
