--- a/templates/tenant/_header.html
+++ b/templates/tenant/_header.html
@@ -8,7 +8,7 @@
           </a>
           <a href="tel:2329872 " class="navbar-number align-items-center">
             <svg width="6" height="7" viewBox="0 0 6 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="3" cy="3.5" r="3" fill="#417086"/>
+              <circle cx="3" cy="3.5" r="3" fill="#624b39"/>
             </svg>
             <i class="ph-phone-bold"></i>
             (546) 232 - 9872         
