decreased image size

--- a/templates/index/_hero.html
+++ b/templates/index/_hero.html
@@ -4,7 +4,7 @@
         <div class="col-xl-8 col-lg-10 mx-auto">
           <div class="hero-shape">
             {% load static %}
-            <img src="{% static 'images/hero-bg-test-new.png' %}" alt="hero-bg">
+            <img src="{% static 'images/hero-bg.png' %}" alt="hero-bg">
             {% comment %}
             https://static.vecteezy.com/system/resources/previews/027/241/451/original/seamless-horizontal-pattern-with-vintage-houses-buying-a-house-housewarming-drawing-on-transparent-background-png.png
             {% endcomment %}
