--- a/templates/about.html
+++ b/templates/about.html
@@ -174,7 +174,7 @@
       <div class="team-member" data-aos="fade-up" data-aos-once="true" data-aos-duration="1000">
         <div class="team-member--thumb">
           {% load static %}
-          <img src="{% static 'images/alpniksarli.jpeg' %}" alt="team" height="325">
+          <img src="{% static 'images/AlpNiksarli.jpeg' %}" alt="team" height="325">
         </div>
         <div class="team-member--content">
           <h6>Alp Niksarli</h6>
@@ -184,7 +184,7 @@
 
       <div class="team-member" data-aos="fade-up" data-aos-once="true" data-aos-duration="1200" >
         <div class="team-member--thumb">
-          <img src="{% static 'images/caganoflazoglu.jpeg' %}" alt="team" height="325">
+          <img src="{% static 'images/CaganOflazoglu.jpeg' %}" alt="team" height="325">
         </div>
         <div class="team-member--content">
           <h6>Cagan Oflazoglu</h6>
