--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -1,145 +1,286 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
 
-    <title>Index Page</title>
+    <title>Home</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
 
     <!-- Stylesheets -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'vendor/bootstrap/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/prism/prism.css' %}"/>
-    
-    <link rel="stylesheet" href="{% static 'vendor/phosphor-icons/css/icons.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/slick/slick.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/aos/aos.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/magnific-popup/magnific-popup.css' %}">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}"/>
-
+    <link
+      rel="stylesheet"
+      href="{% static 'vendor/bootstrap/bootstrap.min.css' %}"
+    />
+    <link rel="stylesheet" href="{% static 'vendor/prism/prism.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'vendor/phosphor-icons/css/icons.css' %}"
+    />
+    <link rel="stylesheet" href="{% static 'vendor/slick/slick.css' %}" />
+    <link rel="stylesheet" href="{% static 'vendor/aos/aos.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'vendor/magnific-popup/magnific-popup.css' %}"
+    />
+    <!-- <link rel="stylesheet" href="{% static 'css/index.css' %}" /> -->
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{% static 'images/newlogo.png' %}" type="image/x-icon" />
-    <link rel="icon" href="{% static 'images/newlogo.png' %}" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="{% static 'images/newlogo.png' %}"
+      type="image/x-icon"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            fontFamily: {
+              custom: ["Poppins", "sans-serif"],
+            },
+            colors: {
+              back_1: "rgba(254, 255, 255, 0.5)",
+              lgrey: "rgba(23,37,42,0.50)",
+              txt: "rgba(23, 37, 42, 1)",
+              bttns: "rgba(58, 175, 169, 1)",
+              customBrown: "#9B775C",
+            },
+          },
+        },
+      };
+    </script>
+    <script defer src="/static/js/navigation.js"></script>
+  </head>
+  <body>
+    <div id="screen" class="w-full box-border px-10">
+      <div
+        class="w-full min-h-128 rounded-lg p-6 bg-[url('/static/images/home.jpeg')] bg-cover bg-center font-custom mb-16"
+      >
+        <div class="w-[60%] p-20 flex flex-col">
+          <div class="text-[80px] text-txt font-semibold">
+            Your Dream Mate,<br />Your Dream <br />Rental.
+          </div>
+          <div class="text-2xl text-white mt-6">
+            Find your perfect living space hassle-free <br />with
+            <span class="font-semibold">GrotN</span>! Enjoy secure <br />housing
+            wherever you desire, <br />without the stress of overbidding or
+            uncertainty. 🏡
+          </div>
+          <div
+            id="get-started"
+            class="group flex mt-10 text-white bg-bttns hover:bg-white hover:text-bttns duration-300 justify-center max-w-[400px] p-6 rounded-lg cursor-pointer transition-colors mb-32"
+          >
+            <div class="text-2xl pr-3 group-hover:text-bttns">
+              Get Started With GrotN
+            </div>
+            <svg
+              width="30"
+              height="30"
+              viewBox="0 0 35 36"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+              class="transition-colors group-hover:text-bttns"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M2.73484 17.9999C2.73484 18.435 2.90769 18.8523 3.21537 19.16C3.52305 19.4677 3.94035 19.6405 4.37547 19.6405L26.6661 19.6405L20.7161 25.5905C20.4263 25.9015 20.2685 26.3129 20.276 26.7379C20.2835 27.163 20.4557 27.5685 20.7563 27.8691C21.0569 28.1697 21.4624 28.3419 21.8874 28.3494C22.3125 28.3569 22.7238 28.1991 23.0348 27.9093L31.7848 19.1593C32.0921 18.8517 32.2646 18.4347 32.2646 17.9999C32.2646 17.5651 32.0921 17.1482 31.7848 16.8405L23.0348 8.09053C22.7238 7.80073 22.3125 7.64296 21.8874 7.65046C21.4624 7.65796 21.0569 7.83014 20.7563 8.13074C20.4557 8.43133 20.2835 8.83686 20.276 9.26189C20.2685 9.68693 20.4263 10.0983 20.7161 10.4093L26.6661 16.3593L4.37547 16.3593C3.94035 16.3593 3.52305 16.5321 3.21537 16.8398C2.90769 17.1475 2.73484 17.5648 2.73484 17.9999Z"
+                fill="currentColor"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="flex justify-between mb-32">
+        <div class="flex flex-col gap-4 min-w-128 min-h-128">
+          <svg
+            width="35"
+            height="35"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M8.67188 14.3298C8.67188 15.6198 9.66188 16.6598 10.8919 16.6598H13.4019C14.4719 16.6598 15.3419 15.7498 15.3419 14.6298C15.3419 13.4098 14.8119 12.9798 14.0219 12.6998L9.99187 11.2998C9.20187 11.0198 8.67188 10.5898 8.67188 9.36984C8.67188 8.24984 9.54187 7.33984 10.6119 7.33984H13.1219C14.3519 7.33984 15.3419 8.37984 15.3419 9.66984"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M12 6V18"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M15 22H9C4 22 2 20 2 15V9C2 4 4 2 9 2H15C20 2 22 4 22 9V15C22 20 20 22 15 22Z"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+          <div class="text-[40px] font-bold">$2500+</div>
+          <div class="text-3xl font-semibold">Capital Raised</div>
+        </div>
+        <div class="flex flex-col gap-4 min-w-128 min-h-128">
+          <svg
+            width="35"
+            height="35"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12 19.5C16.1421 19.5 19.5 16.1421 19.5 12C19.5 7.85786 16.1421 4.5 12 4.5C7.85786 4.5 4.5 7.85786 4.5 12C4.5 16.1421 7.85786 19.5 12 19.5Z"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M12 4V2"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M4 12H2"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M12 20V22"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M20 12H22"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
 
-</head>
-<body>
-    <!-- 
-  #############
-  Navigation Menu
-  #############
-  -->
-  {% include 'index/_header.html' with page='index' %}
+          <div class="text-[40px] font-bold">100+</div>
+          <div class="text-3xl font-semibold">Available Houses.</div>
+        </div>
+        <div class="flex flex-col gap-4 min-w-128 min-h-128">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="35"
+            height="35"
+            fill="currentColor"
+            class="bi bi-fire"
+            viewBox="0 0 16 16"
+          >
+            <path
+              d="M8 16c3.314 0 6-2 6-5.5 0-1.5-.5-4-2.5-6 .25 1.5-1.25 2-1.25 2C11 4 9 .5 6 0c.357 2 .5 4-2 6-1.25 1-2 2.729-2 4.5C2 14 4.686 16 8 16m0-1c-1.657 0-3-1-3-2.75 0-.75.25-2 1.25-3C6.125 10 7 10.5 7 10.5c-.375-1.25.5-3.25 2-3.5-.179 1-.25 2 1 3 .625.5 1 1.364 1 2.25C11 14 9.657 15 8 15"
+            />
+          </svg>
+          <div class="text-[40px] font-bold">200</div>
+          <div class="text-3xl font-semibold">
+            Active matchings <br />
+            every day.
+          </div>
+        </div>
+        <div class="flex flex-col gap-4 min-w-128 min-h-128">
+          <svg
+            width="35"
+            height="35"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M9.15957 10.87C9.05957 10.86 8.93957 10.86 8.82957 10.87C6.44957 10.79 4.55957 8.84 4.55957 6.44C4.55957 3.99 6.53957 2 8.99957 2C11.4496 2 13.4396 3.99 13.4396 6.44C13.4296 8.84 11.5396 10.79 9.15957 10.87Z"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M16.4103 4C18.3503 4 19.9103 5.57 19.9103 7.5C19.9103 9.39 18.4103 10.93 16.5403 11C16.4603 10.99 16.3703 10.99 16.2803 11"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M4.15973 14.56C1.73973 16.18 1.73973 18.82 4.15973 20.43C6.90973 22.27 11.4197 22.27 14.1697 20.43C16.5897 18.81 16.5897 16.17 14.1697 14.56C11.4297 12.73 6.91973 12.73 4.15973 14.56Z"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M18.3398 20C19.0598 19.85 19.7398 19.56 20.2998 19.13C21.8598 17.96 21.8598 16.03 20.2998 14.86C19.7498 14.44 19.0798 14.16 18.3698 14"
+              stroke="#000000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
 
-  <!-- 
-    #############
-    Hero V2 Section
-    #############
-  -->
-  {% include 'index/_hero.html' %}
-  
-  <!--
-    ###########
-    Counter Section
-    ###########
-  -->
-  {% include 'index/_counter.html' %}
-    
-  <!-- 
-    #############
-    Services Section
-    #############
-  -->
-  {% include 'index/_services.html' %}  
-  
-  <!-- 
-    #############
-    Feature Section
-    #############
-  -->
-  {% include 'index/_feature.html' %}
-  
-    <!-- 
-    #############
-    Properties Section
-    #############
-  -->
-  {% include 'index/_properties.html' %}
+          <div class="text-[40px] font-bold">280+</div>
+          <div class="text-3xl font-semibold">Active users.</div>
+        </div>
+      </div>
+      <div class="flex flex-col w-full">
+        <p class="text-[40px] font-semibold">How Does GrotN Work?</p>
+      </div>
+    </div>
+    <div
+      class="fixed bottom-0 right-0 mb-10 mr-10 w-32 h-32 bg-customBrown cursor-pointer rounded-full flex items-center justify-center"
+    >
+      <span class="text-white text-lg font-semibold">Contact Us</span>
+    </div>
 
-  {% comment %}
-  <!-- 
-    #############
-    Testimonial V2 Section
-    #############
-  -->
-  {% include 'index/_testimonial.html' %} 
-  
-  <!-- 
-    #############
-    Blog Home Section
-    #############
-  -->
-  {% include 'index/_blog_home.html' %} 
-  {% endcomment %}
-
-
-
-  <!-- 
-    #############
-    Footer Navigation Section
-    #############
-  -->
-  {% include 'index/_footer.html' %}
-  
-  <!-- 
-    #############
-    Login Modals Section
-    #############
-  -->
-  {% include 'index/_login_modal.html' %}
-
-
-  <!-- Removing GET Parameters in URL -->
-  <!-- UNDONE -->
-  <script>
-    function removeParamFromURL(url, param) {
-        const [path, searchParams] = url.split('?');
-        const newSearchParams = searchParams
-            ?.split('&')
-            .filter((p) => !(p === param || p.startsWith(`${param}=`)))
-            .join('&');
-        return newSearchParams ? `${path}?${newSearchParams}` : path;
-    }
-    if (window.location.href.includes('?')) {
-        // window.location.replace(removeParamFromURL(window.location.href, 'force'));
-    }
-  </script>
-
-  <!-- Mark up for Script Section-->
-  <script src="{% static 'vendor/jQuery/jquery.min.js' %}"></script>
-  <script src="{% static 'vendor/bootstrap/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'vendor/prism/prism.js' %}"></script>
-  <script src="{% static 'vendor/isotope/isotope.min.js' %}"></script>
-  <script src="{% static 'vendor/slick/slick.min.js' %}"></script>
-  <script src="{% static 'vendor/aos/aos.js' %}"></script>
-  <script src="{% static 'vendor//counter-up/countup.js' %}"></script>
-  <script src="{% static 'vendor/waypoints/waypoints.min.js' %}"></script>
-  <script src="{% static 'vendor/scrollit/scrollit.min.js' %}"></script>
-  <script src="{% static 'vendor/magnific-popup/magnific-popup.min.js' %}"></script>
-  <script src="{% static 'js/script.js' %}"></script>
-
-  <!-- Script for Login Modal -->
-  {% if request.session.href %}
-  <script>
-    $(document).ready(function(){
-      let href = "{{ request.session.href }}";
-      $(href).modal("show");
-      console.log("{{ request.session.message }}")
-    });
-  </script>
-  {% endif %}
-
-</body>
+    <!-- Mark up for Script Section-->
+    <script src="{% static 'vendor/jQuery/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'vendor/prism/prism.js' %}"></script>
+    <script src="{% static 'vendor/isotope/isotope.min.js' %}"></script>
+    <script src="{% static 'vendor/slick/slick.min.js' %}"></script>
+    <script src="{% static 'vendor/aos/aos.js' %}"></script>
+    <script src="{% static 'vendor//counter-up/countup.js' %}"></script>
+    <script src="{% static 'vendor/waypoints/waypoints.min.js' %}"></script>
+    <script src="{% static 'vendor/scrollit/scrollit.min.js' %}"></script>
+    <script src="{% static 'vendor/magnific-popup/magnific-popup.min.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
+    <script>
+      $(document).ready(function () {
+        $("#get-started").click(function () {
+          window.location.href = "/tenant/tenant_signup.html";
+        });
+      });
+    </script>
+  </body>
 </html>
