[F] Added footer to Home page, next step is to create different navbars and figure out how to navigate to different pages.

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -56,12 +56,14 @@
               txt: "rgba(23, 37, 42, 1)",
               bttns: "rgba(58, 175, 169, 1)",
               customBrown: "#9B775C",
+              darkGreen: "#17252a",
             },
           },
         },
       };
     </script>
     <script defer src="/static/js/navigation.js"></script>
+    <script defer src="/static/js/footer.js"></script>
   </head>
   <body>
     <div id="screen" class="w-full box-border px-10">
